# tracer

./: .gitignore  README.md  pyproject.toml
client/: cosmos_client.py  isaacsim_env.py  leapfrog_controller.py  main.py
models/: __init__.py  inverse_dynamics.py
proto/: video_service_pb2.py  video_service_pb2_grpc.py
scripts/: compile_proto.sh
server/: cosmos_server.py
tracer/client/: cosmos_client.py  leapfrog_controller.py
tracer/proto/: video_service.proto
